# WasteWisely

./: .gitignore  .pre-commit-config.yaml  README.md  README_TR.md  SECURITY.md  build.py  gen_i18n.py  index.html  installer.py  package-lock.json  package.json  pyproject.toml
.agent/state/: JOURNAL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/: architecture.md
frontend/: app.js  i18n.js  index.html  style.css
server/: index.mjs
src/: App.css  App.tsx  actions.py  api.py  api.ts  classifier.py  data.ts  i18n.ts  index.css  main.py  scanner.py
tests/: test_classifier.py  test_scanner.py
tests/e2e/: test_windows_smoke.py
tests/integration/: test_installer_wrapper.py  test_main_entrypoints.py
tests/sanity/: test_build_contract.py  test_packaging_metadata.py
