[project]
name = "wastewise"
version = "2.0.0"
description = "WasteWisely - Dijital Atık Denetçisi"
authors = [
    {name = "Selin / Agent Company", email = "selin@agentcompany.local"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
desktop = [
    "pywebview>=4.0.0",
    "win10toast>=0.9"
]
dev = [
    "pytest>=7.0.0",
    "pytest-playwright>=0.4.0",
    "playwright>=1.40.0",
    "httpx>=0.27.0"
]
build = [
    "pyinstaller>=6.0.0",
    "pywin32>=306"
]
all = [
    "pywebview>=4.0.0",
    "win10toast>=0.9",
    "pyinstaller>=6.0.0",
    "pywin32>=306",
    "watchdog>=3.0.0"
]

[project.scripts]
wastewise = "src.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
